--- a/application/views/scripts/admin/members/edit.phtml
+++ b/application/views/scripts/admin/members/edit.phtml
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div class="panel-body">
-                    <form class="form-horizontal" method="post">
+                    <form class="form-horizontal" method="post" enctype="multipart/form-data">
                         <input type="hidden" name="task" value="update">
 
                         <fieldset>
