--- a/application/views/scripts/admin/users/datatable.phtml
+++ b/application/views/scripts/admin/users/datatable.phtml
@@ -1,16 +1,35 @@
 <?php
 
+    //https://datatables.net/manual/server-side
+
     $datatableJson = array(
         'draw' => $this->draw,
         'recordsTotal' => $this->usersTotal,
         'recordsFiltered' => $this->usersFilteredCount,
-        'data' => array()
+        'data' => array()   //redovi u tabeli
     );
     
     
     foreach ($this->users as $user) {
         
         $row = array();
+        
+        //ovde idu podaci koji su nekad bili data-user-id
+        //bice smesteno interno
+        $row['DT_RowData'] = array(
+            'user-id' => $user['id']
+        );
+        
+        //ovde mogu svi atributi; bice 
+        $row['DT_RowAttr'] = array(
+            'data-user-id' => $user['id'],
+            'title' => $user['username']
+        );
+        
+        if ($user['status'] == Application_Model_DbTable_CmsUsers::STATUS_DISABLED) {
+            $row['DT_RowClass'] = 'danger';  //da bismo dobili crvene disable-ovane user-e
+            
+        }
         
         foreach ($this->columns as $columnName) {
             if ($columnName == 'status') {
@@ -22,40 +41,41 @@
                 }
             }
             else if ($columnName == 'actions') {
-                $this->placeholder('actions')->exchangeArray(array());
+                $this->placeholder('actions')->exchangeArray(array());  //ovo resetuje placeholder; i naziv placeholdera ne mora da bude kao naziv actions
                 
-                $this->placeholder('actions')->captureStart();
+                $this->placeholder('actions')->captureStart();  // ako se ne uradi ovo odmah ce se naredni html prikazati
                 
-                if ($user['status'] == Application_Model_DbTable_CmsUsers::STATUS_ENABLED) {
-                    ?>
-                        <div class="btn-group btn-group-sm" role="group" aria-label="...">
-                            <a 
-                                href="<?php echo $this->url(array('controller' => 'admin_users', 'action' => 'edit', 'id' => $user['id']), 'default', true); ?>"
-                                type="button" class="btn btn-default" title="edit"><i class="glyphicon glyphicon-pencil"></i></a>
-                            <button type="button" data-user-id=" <?php echo $this->escape($user['id']); ?> " data-action="disable" class="btn btn-default" title="disabled"><i class="glyphicon glyphicon-remove"></i></button>
-                            <button type="button" data-user-id=" <?php echo $this->escape($user['id']); ?> " data-action="delete" class="btn btn-default" title="delete"><i class="glyphicon glyphicon-trash"></i></button>
-                            <button type="button" data-user-id=" <?php echo $this->escape($user['id']); ?> " data-action="resetpassword" class="btn btn-default" title="reset password"><i class="fa fa-unlock-alt"></i></button>
-                        </div>
-                    <?php
-                }
-                else {
-                    ?>
-                        <div class="btn-group btn-group-sm" role="group" aria-label="...">
-                            <a 
-                                href="<?php echo $this->url(array('controller' => 'admin_users', 'action' => 'edit', 'id' => $user['id']), 'default', true); ?>"
-                                type="button" class="btn btn-default" title="edit"><i class="glyphicon glyphicon-pencil"></i></a>
-                            <button type="button" data-user-id=" <?php echo $this->escape($user['id']); ?> " data-action="enable" class="btn btn-default" title="enable"><i class="glyphicon glyphicon-ok"></i></button>
-                            <button type="button" data-user-id=" <?php echo $this->escape($user['id']); ?> " data-action="delete" class="btn btn-default" title="delete"><i class="glyphicon glyphicon-trash"></i></button>
-                            <button type="button" data-user-id=" <?php echo $this->escape($user['id']); ?> " data-action="resetpassword" class="btn btn-default" title="reset password"><i class="fa fa-unlock-alt"></i></button>
-                        </div>
-                    <?php
-                }
+                    if ($user['status'] == Application_Model_DbTable_CmsUsers::STATUS_ENABLED) {
+                        ?>
+                            <div class="btn-group btn-group-sm" role="group" aria-label="...">
+                                <a 
+                                    href="<?php echo $this->url(array('controller' => 'admin_users', 'action' => 'edit', 'id' => $user['id']), 'default', true); ?>"
+                                    type="button" class="btn btn-default" title="edit"><i class="glyphicon glyphicon-pencil"></i></a>
+                                <button type="button" data-user-id=" <?php echo $this->escape($user['id']); ?> " data-action="disable" class="btn btn-default" title="disabled"><i class="glyphicon glyphicon-remove"></i></button>
+                                <button type="button" data-user-id=" <?php echo $this->escape($user['id']); ?> " data-action="delete" class="btn btn-default" title="delete"><i class="glyphicon glyphicon-trash"></i></button>
+                                <button type="button" data-user-id=" <?php echo $this->escape($user['id']); ?> " data-action="resetpassword" class="btn btn-default" title="reset password"><i class="fa fa-unlock-alt"></i></button>
+                            </div>
+                        <?php
+                    }
+                    else {
+                        ?>
+                            <div class="btn-group btn-group-sm" role="group" aria-label="...">
+                                <a 
+                                    href="<?php echo $this->url(array('controller' => 'admin_users', 'action' => 'edit', 'id' => $user['id']), 'default', true); ?>"
+                                    type="button" class="btn btn-default" title="edit"><i class="glyphicon glyphicon-pencil"></i></a>
+                                <button type="button" data-user-id=" <?php echo $this->escape($user['id']); ?> " data-action="enable" class="btn btn-default" title="enable"><i class="glyphicon glyphicon-ok"></i></button>
+                                <button type="button" data-user-id=" <?php echo $this->escape($user['id']); ?> " data-action="delete" class="btn btn-default" title="delete"><i class="glyphicon glyphicon-trash"></i></button>
+                                <button type="button" data-user-id=" <?php echo $this->escape($user['id']); ?> " data-action="resetpassword" class="btn btn-default" title="reset password"><i class="fa fa-unlock-alt"></i></button>
+                            </div>
+                        <?php
+                    }
                 
                 $this->placeholder('actions')->captureEnd();
                 
                 $row[] = $this->placeholder('actions')->toString();
             }
-            else {
+            else { 
+                //ovo su obicne kolone koje nemaju html u sebe
                 $row[] = $user[$columnName];
             }
         }
@@ -63,6 +83,7 @@
         $datatableJson['data'][] = $row;
         
     }
+    
     
     //send JSON from view script (disables layout, and set the Content-Type header to application/json
     echo $this->json($datatableJson);
