--- a/application/views/scripts/admin/dashboard/index.phtml
+++ b/application/views/scripts/admin/dashboard/index.phtml
@@ -4,7 +4,14 @@
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
-			<div class="row">
+
+            <div class="row" id="row2">
+                <p>Dim:</p>
+
+            </div>
+
+            <div class="row">
+                <p>Mil 1:</p>
                 <div class="col-lg-3 col-md-6">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
@@ -37,7 +44,7 @@
                                     <i class="fa fa-briefcase fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
-                                    <div id="servicesNumbers" class="huge">12 / 5</div>
+                                    <div id="servicesNumbers" class="huge"></div>
                                     <div>Services</div>
                                 </div>
                             </div>
@@ -61,7 +68,7 @@
                                     <i class="fa fa-user fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
-                                    <div id="usersNumbers" class="huge">34 / 23</div>
+                                    <div id="usersNumbers" class="huge"></div>
                                     <div>Users</div>
                                 </div>
                             </div>
@@ -102,17 +109,253 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="row">
+                <p>Mil 2:</p>
+                <div class="col-lg-3 col-md-6">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-table fa-5x"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div id="membersNumbers3" class="huge"></div>
+                                    <div>Members total / active</div>
+                                </div>
+                            </div> 
+                        </div> 
+                        <a href="#">
+                            <div class="panel-footer">
+                                <a href=" <?php echo $this->url(array('controller' => 'admin_members', 'action' => 'index'), 'default', 'true'); ?> ">
+                                    <span class="pull-left">View Details</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <div class="clearfix"></div>
+                                </a>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="panel panel-green">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-briefcase fa-5x"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div id="servicesNumbers3" class="huge"></div>
+                                    <div>Services</div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#">
+                            <div class="panel-footer">
+                                <a href=" <?php echo $this->url(array('controller' => 'admin_services', 'action' => 'index'), 'default', 'true'); ?> ">
+                                    <span class="pull-left">View Details</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <div class="clearfix"></div>
+                                </a>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="panel panel-yellow">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-user fa-5x"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div id="usersNumbers3" class="huge"></div>
+                                    <div>Users</div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#">
+                            <div class="panel-footer">
+                                <a href=" <?php echo $this->url(array('controller' => 'admin_users', 'action' => 'index'), 'default', 'true'); ?> ">
+                                    <span class="pull-left">View Details</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <div class="clearfix"></div>
+                                </a>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="panel panel-red">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-users fa-5x"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div id="clientsNumbers3" class="huge"></div>
+                                    <div>Clients</div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#">
+                            <div class="panel-footer">
+                                <a href=" <?php echo $this->url(array('controller' => 'admin_clients', 'action' => 'index'), 'default', 'true'); ?> ">
+                                    <span class="pull-left">View Details</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <div class="clearfix"></div>
+                                </a>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <p>Mil 3 (Sta):</p>
+                <div class="col-lg-3 col-md-6">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-table fa-5x"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div id="membersNumbers4" class="huge"></div>
+                                    <div>Members total / active</div>
+                                </div>
+                            </div> 
+                        </div> 
+                        <a href="#">
+                            <div class="panel-footer">
+                                <a href=" <?php echo $this->url(array('controller' => 'admin_members', 'action' => 'index'), 'default', 'true'); ?> ">
+                                    <span class="pull-left">View Details</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <div class="clearfix"></div>
+                                </a>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="panel panel-green">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-briefcase fa-5x"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div id="servicesNumbers4" class="huge"></div>
+                                    <div>Services</div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#">
+                            <div class="panel-footer">
+                                <a href=" <?php echo $this->url(array('controller' => 'admin_services', 'action' => 'index'), 'default', 'true'); ?> ">
+                                    <span class="pull-left">View Details</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <div class="clearfix"></div>
+                                </a>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="panel panel-yellow">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-user fa-5x"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div id="usersNumbers4" class="huge"></div>
+                                    <div>Users</div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#">
+                            <div class="panel-footer">
+                                <a href=" <?php echo $this->url(array('controller' => 'admin_users', 'action' => 'index'), 'default', 'true'); ?> ">
+                                    <span class="pull-left">View Details</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <div class="clearfix"></div>
+                                </a>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="panel panel-red">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-users fa-5x"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div id="clientsNumbers4" class="huge"></div>
+                                    <div>Clients</div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#">
+                            <div class="panel-footer">
+                                <a href=" <?php echo $this->url(array('controller' => 'admin_clients', 'action' => 'index'), 'default', 'true'); ?> ">
+                                    <span class="pull-left">View Details</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <div class="clearfix"></div>
+                                </a>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            
 
 <script>
     
     //treba preko ajax-a da pozivamo
-    // /admin_users/dashboard
-    // /admin_services/dashboard
+    // /admin_users/dashboard       #usersNumbers
+    // /admin_services/dashboard    #servicesNumbers
     // /admin_members/dashboard
     // /admin_clients/dashboard
     
 
     <?php $this->inlineScript()->captureStart(); ?>
+    
+    $.ajax({
+        url: "<?php echo $this->url(array('controller' => 'admin_members', 'action' => 'dashboard'), 'default', true); ?>",
+        cache: false
+    }).done(function (data) {
+        var element = $('#membersNumbers');
+        element.append(data);
+    }).fail(function () {
+        alert('Unable to load current data for members.');
+    }).always(function () {
+    });
+    
+    $.ajax({
+        url: "<?php echo $this->url(array('controller' => 'admin_services', 'action' => 'dashboard'), 'default', true); ?>",
+        cache: false
+    }).done(function (data) {
+        var element = $('#servicesNumbers');
+        element.append(data);
+    }).fail(function () {
+        alert('Unable to load current data for services.');
+    }).always(function () {
+    });
+    
+    
+    $.ajax({
+        url: "<?php echo $this->url(array('controller' => 'admin_users', 'action' => 'dashboard'), 'default', true); ?>",
+        cache: false
+    }).done(function (data) {
+        var element = $('#usersNumbers');
+        element.append(data);
+    }).fail(function () {
+        alert('Unable to load current data for users.');
+    }).always(function () {
+    });
+    
     
     $.ajax({
         url: "<?php echo $this->url(array('controller' => 'admin_clients', 'action' => 'dashboard'), 'default', true); ?>",
@@ -127,12 +370,12 @@
     
     
     
-    
+    //dashboard2
     $.ajax({
-        url: "<?php echo $this->url(array('controller' => 'admin_members', 'action' => 'dashboard'), 'default', true); ?>",
+        url: "<?php echo $this->url(array('controller' => 'admin_members', 'action' => 'dashboard2'), 'default', true); ?>",
         cache: false
     }).done(function (data) {
-        var element = $('#membersNumbers');
+        var element = $('#row2');
         element.append(data);
     }).fail(function () {
         alert('Unable to load current data for members.');
@@ -140,12 +383,145 @@
     });
     
     
-
+    $.ajax({
+        url: "<?php echo $this->url(array('controller' => 'admin_services', 'action' => 'dashboard2'), 'default', true); ?>",
+        cache: false
+    }).done(function (data) {
+        var element = $('#row2');
+        element.append(data);
+    }).fail(function () {
+        alert('Unable to load current data for services.');
+    }).always(function () {
+    });
     
+    
+    $.ajax({
+        url: "<?php echo $this->url(array('controller' => 'admin_users', 'action' => 'dashboard2'), 'default', true); ?>",
+        cache: false
+    }).done(function (data) {
+        var element = $('#row2');
+        element.append(data);
+    }).fail(function () {
+        alert('Unable to load current data for users.');
+    }).always(function () {
+    });
+    
+    
+    $.ajax({
+        url: "<?php echo $this->url(array('controller' => 'admin_clients', 'action' => 'dashboard2'), 'default', true); ?>",
+        cache: false
+    }).done(function (data) {
+        var element = $('#row2');
+        element.append(data);
+    }).fail(function () {
+        alert('Unable to load current data for clients.');
+    }).always(function () {
+    });
+    
+    
+    
+    //dashboard3
+    $.ajax({
+        url: "<?php echo $this->url(array('controller' => 'admin_members', 'action' => 'dashboard3'), 'default', true); ?>",
+        cache: false
+    }).done(function (data) {
+        var element = $('#membersNumbers3');
+        element.append(data);
+    }).fail(function () {
+        alert('Unable to load current data for members.');
+    }).always(function () {
+    });
+    
+    $.ajax({
+        url: "<?php echo $this->url(array('controller' => 'admin_services', 'action' => 'dashboard3'), 'default', true); ?>",
+        cache: false
+    }).done(function (data) {
+        var element = $('#servicesNumbers3');
+        element.append(data);
+    }).fail(function () {
+        alert('Unable to load current data for services.');
+    }).always(function () {
+    });
+    
+    
+    $.ajax({
+        url: "<?php echo $this->url(array('controller' => 'admin_users', 'action' => 'dashboard3'), 'default', true); ?>",
+        cache: false
+    }).done(function (data) {
+        var element = $('#usersNumbers3');
+        element.append(data);
+    }).fail(function () {
+        alert('Unable to load current data for users.');
+    }).always(function () {
+    });
+    
+    
+    $.ajax({
+        url: "<?php echo $this->url(array('controller' => 'admin_clients', 'action' => 'dashboard3'), 'default', true); ?>",
+        cache: false
+    }).done(function (data) {
+        var element = $('#clientsNumbers3');
+        element.append(data);
+    }).fail(function () {
+        alert('Unable to load current data for clients.');
+    }).always(function () {
+    });
+    
+    
+    //using ajax with json resonse
+    // probaj da ne disajblujes sve ovo nego da posaljes preko json
+
+    //preko json-a
+    $.ajax({
+        url: "<?php echo $this->url(array('controller' => 'admin_dashboard', 'action' => 'data'), 'default', true); ?>",
+        dataType: 'json',
+        cache: false
+    }).done(function (data) {
+        var membersNumbers4 = $('#membersNumbers4');
+        var servicesNumbers4 = $('#servicesNumbers4');
+        var usersNumbers4 = $('#usersNumbers4');
+        var clientsNumbers4 = $('#clientsNumbers4');
+
+
+        //var ids = [];
+        $.each(data, function(i, item) {
+            switch(i) {
+                case "activeMembers":
+                    membersNumbers4.append(item);
+                    break;
+                case "totalMembers":
+                    membersNumbers4.append(" / " + item);
+                    break;
+                case "activeServices":
+                    servicesNumbers4.append(item);
+                    break;
+                case "totalServices":
+                    servicesNumbers4.append(" / " + item);
+                    break;
+                 case "activeUsers":
+                    usersNumbers4.append(item);
+                    break;
+                 case "totalUsers":
+                    usersNumbers4.append(" / " + item);
+                    break;
+                 case "activeClients":
+                    clientsNumbers4.append(item);
+                    break;
+                 case "totalClients":
+                    clientsNumbers4.append(" / " + item);
+                    break;
+            }
+            //ids.push(i + ": " + item);
+        });
+        //alert(JSON.stringify(ids));
+        
+        
+    }).fail(function () {
+        alert('Unable to load current data for members.');
+    }).always(function () {
+    });
     
     <?php $this->inlineScript()->captureEnd(); ?>
     
-
-    
-    
+  
 </script>
