--- a/application/views/scripts/admin/members/index.phtml
+++ b/application/views/scripts/admin/members/index.phtml
@@ -57,7 +57,7 @@
                                         <td class="text-center">
                                             <div class="btn-group btn-group-sm" role="group" aria-label="...">
                                                 <a 
-                                                    href=" <?php echo $this->url(array('controller' => 'aboutus', 'action' => 'member', 'id' => $member['id']), 'default', true) ?> "
+                                                    href=" <?php echo $this->memberUrl($member); ?> "
                                                     target="_blank"
                                                     type="button" class="btn btn-default" title="preview"><i class="glyphicon glyphicon-eye-close"></i></a>
                                                 <a 
@@ -82,7 +82,7 @@
                                         <td class="text-center">
                                             <div class="btn-group btn-group-sm" role="group" aria-label="...">
                                                 <a 
-                                                    href=" <?php echo $this->url(array('controller' => 'aboutus', 'action' => 'member', 'id' => $member['id']), 'default', true) ?> "
+                                                    href=" <?php echo $this->memberUrl($member); ?> "
                                                     target="_blank"
                                                     type="button" class="btn btn-default" title="preview"><i class="glyphicon glyphicon-eye-open"></i></a>
                                                 <a 
