--- a/application/views/scripts/admin/users/index.phtml
+++ b/application/views/scripts/admin/users/index.phtml
@@ -190,7 +190,7 @@
     <input type="hidden" name="sorted_ids" value="">
 </form>
 
-<div style="display: none">
+<div style="display: none" id="message-templates">
     <div data-container="message-box-success" class="alert alert-success alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <span data-container="message-text"></span>
@@ -319,14 +319,16 @@
             }
        }).done(function(data) {
             if (data['status'] === 'ok') {
-                var messageBox = $('[data-container="message-box-success"]').last().clone(true); //klonirali smo template (true->klonirali smo i akcije koje vaze)
+                var messageBox = $('#message-templates [data-container="message-box-success"]').clone(true); //klonirali smo template (true->klonirali smo i akcije koje vaze)
                 messageBox.find('[data-container="message-text"]').text(data['statusMessage']);
                 $('#system-messages-container').append(messageBox);
+                messageBox.delay(5000).fadeOut(); //nakon 5 sekundi ce se izvrsiti funkcija fadeOut() -> ona uklanja poruku
             }
             else {
-                var messageBox = $('[data-container="message-box-error"]').last().clone(true); //klonirali smo template (true->klonirali smo i akcije koje vaze)
+                var messageBox = $('#message-templates [data-container="message-box-error"]').last().clone(true); //klonirali smo template (true->klonirali smo i akcije koje vaze)
                 messageBox.find('[data-container="message-text"]').text(data['statusMessage']);
                 $('#system-messages-container').append(messageBox);
+                messageBox.delay(5000).fadeOut();
             }
        }).fail(function() {
            //error in communication with server
@@ -358,11 +360,13 @@
                 var messageBox = $('[data-container="message-box-success"]').last().clone(true); //klonirali smo template (true->klonirali smo i akcije koje vaze)
                 messageBox.find('[data-container="message-text"]').text(data['statusMessage']);
                 $('#system-messages-container').append(messageBox);
+                messageBox.delay(5000).fadeOut();
             }
             else {
                 var messageBox = $('[data-container="message-box-error"]').last().clone(true); //klonirali smo template (true->klonirali smo i akcije koje vaze)
                 messageBox.find('[data-container="message-text"]').text(data['statusMessage']);
                 $('#system-messages-container').append(messageBox);
+                messageBox.delay(5000).fadeOut();
             }
        }).fail(function() {
            //error in communication with server
@@ -394,11 +398,13 @@
                 var messageBox = $('[data-container="message-box-success"]').last().clone(true); //klonirali smo template (true->klonirali smo i akcije koje vaze)
                 messageBox.find('[data-container="message-text"]').text(data['statusMessage']);
                 $('#system-messages-container').append(messageBox);
+                messageBox.delay(5000).fadeOut();
             }
             else {
                 var messageBox = $('[data-container="message-box-error"]').last().clone(true); //klonirali smo template (true->klonirali smo i akcije koje vaze)
                 messageBox.find('[data-container="message-text"]').text(data['statusMessage']);
                 $('#system-messages-container').append(messageBox);
+                messageBox.delay(5000).fadeOut();
             }
        }).fail(function() {
            //error in communication with server
@@ -430,11 +436,13 @@
                 var messageBox = $('[data-container="message-box-success"]').last().clone(true); //klonirali smo template (true->klonirali smo i akcije koje vaze)
                 messageBox.find('[data-container="message-text"]').text(data['statusMessage']);
                 $('#system-messages-container').append(messageBox);
+                messageBox.delay(5000).fadeOut();
             }
             else {
                 var messageBox = $('[data-container="message-box-error"]').last().clone(true); //klonirali smo template (true->klonirali smo i akcije koje vaze)
                 messageBox.find('[data-container="message-text"]').text(data['statusMessage']);
                 $('#system-messages-container').append(messageBox);
+                messageBox.delay(5000).fadeOut();
             }
        }).fail(function() {
            //error in communication with server
