--- a/application/views/scripts/aboutus/member.phtml
+++ b/application/views/scripts/aboutus/member.phtml
@@ -88,7 +88,7 @@
                 <div class="inner">
                     <div class="block mdrs">
                         <a class="btn btn-block btn-info" href="#"><i class="fa fa-download"></i> Download Our Press Kit</a>
-                        <a class="btn btn-block btn-success" href="<?php echo $this->baseUrl('/contact'); ?>"><i class="fa fa-envelope-o"></i> Get In Touch</a>
+                        <a class="btn btn-block btn-success" href="<?php echo $this->askMemberUrl($this->member); ?>" <i class="fa fa-envelope-o"></i> Ask Member</a>
                     </div>
                 </div>
             </div>
